build: run every PMD category, and the whole static-analysis stack in every module
pmd-ruleset.xml imported two of PMD's eight java categories. The other six were
never excluded, they were never loaded, so codestyle, design, documentation,
multithreading, performance and security had reported nothing since the ruleset
was written and their silence read as a pass. Loading all eight surfaced 7,795
findings.

482 of them are fixed in the code, 1 by configuring the rule rather than
excluding it (EmptyControlStatement gains allowCommentedBlocks, so the
deliberately-empty RESERVED_PREFIX branch in ModuleSidecar passes on the strength
of the comment that explains it). The remaining 7,312 are excluded, and every
exclusion names its rule, its finding count and the reason it is not worth
following here. Nothing is excluded pre-emptively: a rule that never fired stays
live, so its first violation fails the build instead of arriving inside an
exclusion nobody re-reads.

The bulk of the fixes are mechanical and provably output-preserving: 359
single-character string appends became char appends, 87 consecutive append
statements became one chained expression. The generated-file suite pins output
byte-for-byte and stayed at 0 failures across the change.

ConsecutiveLiteralAppends (58) is excluded rather than fixed because the fix
makes the code worse: TransitiveManifest.toJson collapses from six lines with one
JSON field each into a single 270-column line, for one saved virtual call per
literal pair on a path that runs once per compiled module.

vibetags-annotations and vibetags-cli had Checkstyle and PMD but no SpotBugs, no
Find Security Bugs and no Error Prone. The CLI is the only module in the repo
that turns user-supplied argv into filesystem writes, and it was the one with no
security detectors pointed at it. Both now run the same stack as vibetags, plus
JaCoCo and CycloneDX.

Turning those on found real defects, all fixed here:

- InitCommand called path.getParent() twice, so